# balanced-deck

./: CMakeLists.txt  Doxyfile  README.md  conanfile.py
lib/: CMakeLists.txt
lib/include/BalancedDeck/: BalancedDeck.h
lib/src/: BalancedDeck.cpp
test/: BalancedDeckTest.cpp  CMakeLists.txt  mylibrarytest.cpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
